# linuxsync-client

./: .gitignore  Cargo.toml  Makefile  build.rs
man/: linuxsync.1
protos/: auth.proto  packet.proto
src/: auth.rs  data_handlers.rs  debug.rs  json_parser.rs  main.rs  notifications.rs  paths.rs
src/protos/: auth.rs  mod.rs  packet.rs
src/res/: default.json
