[package]
name = "linuxsync"
version = "0.1.0"
authors = ["Brod8362 <brodriguez410@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "3"
serde_json = "1.0"
dirs = "2.0.2"
protobuf = "2.14.0"

[build-dependencies]
protoc-rust = "2.0"